--- a/Maple2.File.Ingest/Maple2.File.Ingest.csproj
+++ b/Maple2.File.Ingest/Maple2.File.Ingest.csproj
@@ -19,7 +19,7 @@
     <ItemGroup>
         <PackageReference Include="Crc32.NET" Version="1.2.0" />
         <PackageReference Include="DotNetZip" Version="1.16.0" />
-        <PackageReference Include="Maple2.File.Parser" Version="2.0.23" />
+        <PackageReference Include="Maple2.File.Parser.Tadeucci" Version="2.1.0" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     </ItemGroup>
 
