--- a/Maple2.File.Ingest/Maple2.File.Ingest.csproj
+++ b/Maple2.File.Ingest/Maple2.File.Ingest.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
         <PackageReference Include="Crc32.NET" Version="1.2.0" />
+        <PackageReference Include="CsvHelper" Version="32.0.2" />
         <PackageReference Include="DotNetZip" Version="1.16.0" />
         <PackageReference Include="Maple2.File.Parser.Tadeucci" Version="2.1.6" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
@@ -29,6 +30,9 @@
 
     <ItemGroup>
       <None Update="Json\FishingRewards.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Utils\ai_translate.csv">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
