--- a/Maple2.Database/Maple2.Database.csproj
+++ b/Maple2.Database/Maple2.Database.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
         <LangVersion>11</LangVersion>
     </PropertyGroup>
 
