--- a/Maple2.Server.Web/Maple2.Server.Web.csproj
+++ b/Maple2.Server.Web/Maple2.Server.Web.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
         <LangVersion>11</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
