--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -7,30 +7,19 @@ on:
         branches: ["master"]
 
 jobs:
-    build:
+    format:
         runs-on: windows-latest
 
         steps:
             - uses: actions/checkout@v3
+
             - name: Setup .NET
               uses: actions/setup-dotnet@v4
               with:
                   dotnet-version: 8.0.x
-            - name: Cache NuGet Packages
-              id: nuget-packages
-              uses: actions/cache@v3
-              env:
-                  cache-name: nuget-package-cache
-              with:
-                  path: ~/.nuget/packages
-                  key: ${{ runner.os }}-${{ env.cache-name }}
 
-            - name: List NuGet Packages
-              if: ${{ steps.nuget-packages.outputs.cache-hit == 'true' }}
-              continue-on-error: true
-              run: ls -lh ~/.nuget/packages
             - name: Install dotnet-format tool
-              run: dotnet tool install -g dotnet-format
+              run: dotnet tool install -g dotnet-format --version "8.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8/nuget/v3/index.json
 
             - name: Run dotnet-format
-              run: dotnet-format --check --no-restore
+              run: dotnet-format whitespace --check --no-restore
