--- a/Maple2.Server.World/Maple2.Server.World.csproj
+++ b/Maple2.Server.World/Maple2.Server.World.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
         <LangVersion>12</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
