prettier packet logging

--- a/Maple2.Server.Game/appsettings.json
+++ b/Maple2.Server.Game/appsettings.json
@@ -1,7 +1,11 @@
 {
   "Serilog": {
-    "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Expressions" ],
-    "Enrich": [ "WithThreadId" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Expressions"
+    ],
+    "Enrich": ["WithThreadId"],
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
