--- a/Maple2.Tools/Maple2.Tools.csproj
+++ b/Maple2.Tools/Maple2.Tools.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Maple2.PacketLib" Version="1.0.2" />
         <PackageReference Include="SharpZipLib" Version="1.4.2" />
+        <PackageReference Include="Pastel" Version="3.0.0" />
     </ItemGroup>
 
 </Project>
