--- a/Maple2.File.Ingest/Maple2.File.Ingest.csproj
+++ b/Maple2.File.Ingest/Maple2.File.Ingest.csproj
@@ -21,6 +21,10 @@
         <PackageReference Include="CsvHelper" Version="32.0.2" />
         <PackageReference Include="DotNetZip" Version="1.16.0" />
         <PackageReference Include="Maple2.File.Parser.Tadeucci" Version="2.1.22" />
+        <PackageReference Include="DotRecast.Core" Version="2024.2.3" />
+        <PackageReference Include="DotRecast.Detour" Version="2024.2.3" />
+        <PackageReference Include="DotRecast.Recast" Version="2024.2.3" />
+        <PackageReference Include="DotRecast.Recast.Toolset" Version="2024.2.3" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     </ItemGroup>
 
