--- a/Maple2.Tools/Maple2.Tools.csproj
+++ b/Maple2.Tools/Maple2.Tools.csproj
@@ -15,6 +15,8 @@
         <PackageReference Include="Maple2.PacketLib" Version="1.0.2" />
         <PackageReference Include="SharpZipLib" Version="1.4.2" />
         <PackageReference Include="Pastel" Version="3.0.0" />
+        <PackageReference Include="DotRecast.Core" Version="2024.2.3" />
+        <PackageReference Include="DotRecast.Recast.Toolset" Version="2024.2.3" />
     </ItemGroup>
 
 </Project>
