--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,8 @@ GAME_DB_NAME=game-server
 GAME_IP=localhost
 LOGIN_IP=localhost
 
-GRPC_WORDL_IP=localhost
-GRPC_WORDL_PORT=21001
+GRPC_WORLD_IP=localhost
+GRPC_WORLD_PORT=21001
 
 WEB_IP=localhost
 WEB_PORT=4000
