--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,10 @@ GAME_DB_NAME=game-server
 # Maple2.Server - Only needed if hosting for external access
 
 GAME_IP=localhost
-GAME_CHANNEL=1
-GAME_PORT=20002
 LOGIN_IP=localhost
-GRPC_CHANNEL_PORT=21002
+
+GRPC_WORLD_IP=localhost
+GRPC_WORLD_PORT=21001
 
 WEB_IP=localhost
 WEB_PORT=4000
