﻿Add container to ingest metadata

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 ﻿# Maple2.File.Ingest
 
+# If you using docker you need to move the Data folder inside Maple2.File.Ingest folder
+# E.g.:
+# MS2_DATA_FOLDER=ClientData
 MS2_DATA_FOLDER=C:/Nexon/Library/maplestory2/
 
 # Database connection
