﻿Add container to process database seeding and file ingestion

--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,22 @@
 services:
-  metadata:
+  db-seed:
+    container_name: maple2-db-seed
+    image: mcr.microsoft.com/dotnet/sdk:8.0
+    entrypoint: /app/Maple2.Database.Seed/docker-entrypoint.sh
+    depends_on:
+      - mysql
+    links:
+      - mysql
+    env_file:
+      - .env
+    environment:
+      DB_IP: mysql
+    volumes:
+      - .:/app
+      - dotnet-tools:/root/.dotnet/tools
+
+  file-ingest:
+    container_name: maple2-file-ingest
     image: mcr.microsoft.com/dotnet/sdk:8.0
     working_dir: /app/Maple2.File.Ingest
     command: dotnet run
@@ -11,34 +28,23 @@ services:
       - .env
     environment:
       DB_IP: mysql
+      MS2_DATA_FOLDER: /app/MapleStory2/Data
     volumes:
       - .:/app
-
-  world:
-    build:
-      context: .
-      dockerfile: ./Maple2.Server.World/Dockerfile
-    image: maple2-world:dev
-    depends_on:
-      - mysql
-    ports:
-      - 21001:21001
-    env_file:
-      - .env
-    environment:
-      DB_IP: "mysql"
-      GAME_DB_CONNECTION: "Server=host.docker.internal;Database=game-server;User=root;Password=maplestory;oldguids=true"
-      DATA_DB_CONNECTION: "Server=host.docker.internal;Database=maple-data;User=root;Password=maplestory;oldguids=true"
-      CHANNEL_SERVICE: "game-main,game-alt"
+      - /home/user/MapleStory2/Data:/app/MapleStory2/Data
 
   login:
     build:
       context: .
       dockerfile: ./Maple2.Server.Login/Dockerfile
-    image: maple2-login:dev
+    container_name: maple2-login
+    image: maple2/login
+    command: dotnet Maple2.Server.Login.dll
     depends_on:
-      - mysql
-      - world
+      mysql:
+        condition: service_started
+      world:
+        condition: service_started
     ports:
       - 20001:20001
     links:
@@ -51,17 +57,38 @@ services:
       GAME_DB_CONNECTION: "Server=host.docker.internal;Database=game-server;User=root;Password=maplestory;oldguids=true"
       DATA_DB_CONNECTION: "Server=host.docker.internal;Database=maple-data;User=root;Password=maplestory;oldguids=true"
 
+  world:
+    build:
+      context: .
+      dockerfile: ./Maple2.Server.World/Dockerfile
+    container_name: maple2-world
+    image: maple2/world
+    command: dotnet Maple2.Server.World.dll
+    depends_on:
+      - mysql
+    ports:
+      - 21001:21001
+    env_file:
+      - .env
+    environment:
+      DB_IP: "mysql"
+      GAME_DB_CONNECTION: "Server=host.docker.internal;Database=game-server;User=root;Password=maplestory;oldguids=true"
+      DATA_DB_CONNECTION: "Server=host.docker.internal;Database=maple-data;User=root;Password=maplestory;oldguids=true"
+      CHANNEL_SERVICE: "game-main,game-alt"
+
   game-main:
     build:
       context: .
       dockerfile: ./Maple2.Server.Game/Dockerfile
-    image: maple2-game:dev
+    image: maple2/game
     depends_on:
       - mysql
       - world
     ports:
       - 20002:20002
       - 21002:21002
+    env_file:
+      - .env
     environment:
       DB_IP: "mysql"
       GAME_DB_CONNECTION: "Server=host.docker.internal;Database=game-server;User=root;Password=maplestory;oldguids=true"
@@ -76,14 +103,17 @@ services:
     build:
       context: .
       dockerfile: ./Maple2.Server.Game/Dockerfile
-    image: maple2-game:dev
+    image: maple2/game
     depends_on:
       - mysql
       - world
     ports:
       - 20003:20003
       - 21003:21003
+    env_file:
+      - .env
     environment:
+      DB_IP: "mysql"
       GAME_DB_CONNECTION: "Server=host.docker.internal;Database=game-server;User=root;Password=maplestory;oldguids=true"
       DATA_DB_CONNECTION: "Server=host.docker.internal;Database=maple-data;User=root;Password=maplestory;oldguids=true"
       GAME_CHANNEL: 2
@@ -96,7 +126,7 @@ services:
     build:
       context: .
       dockerfile: ./Maple2.Server.Web/Dockerfile
-    image: maple2-web:dev
+    image: maple2/web
     depends_on:
       - mysql
     ports:
@@ -121,4 +151,5 @@ services:
       - 3306:3306
 
 volumes:
+  dotnet-tools:
   mysql:
