--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
 ﻿# Maple2.File.Ingest
 
-# If you using docker you need to move the Data folder inside Maple2.File.Ingest folder
-# E.g.:
-# MS2_DATA_FOLDER=ClientData
+# To use with docker, rename MS2_DATA_FOLDER to MS2_DOCKER_DATA_FOLDER
 MS2_DATA_FOLDER=C:/Nexon/Library/maplestory2/
 
 # Database connection
