--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,4 @@
-services:
+﻿services:
   db-seed:
     container_name: maple2-db-seed
     image: mcr.microsoft.com/dotnet/sdk:8.0
@@ -13,7 +13,7 @@ services:
       DB_IP: mysql
     volumes:
       - .:/app
-      - dotnet-tools:/root/.dotnet/tools
+      - dotnet_tools:/root/.dotnet/tools
 
   file-ingest:
     container_name: maple2-file-ingest
@@ -86,7 +86,7 @@ services:
     env_file:
       - .env
     environment:
-      DB_IP: "mysql"
+      DB_IP: mysql
       GAME_CHANNEL: 1
       GAME_PORT: 20002
       GRPC_CHANNEL_PORT: 21002
@@ -107,7 +107,7 @@ services:
     env_file:
       - .env
     environment:
-      DB_IP: "mysql"
+      DB_IP: mysql
       GAME_CHANNEL: 2
       GAME_PORT: 20003
       GRPC_CHANNEL_PORT: 21003
@@ -127,10 +127,10 @@ services:
     env_file:
       - .env
     environment:
-      GAME_DB_CONNECTION: "Server=host.docker.internal;Database=game-server;User=root;Password=maplestory;oldguids=true"
+      DB_IP: mysql
 
   mysql:
-    image: mysql:8.4
+    image: mysql:8.0
     restart: unless-stopped
     container_name: maple2-db
     env_file:
@@ -143,5 +143,5 @@ services:
       - 3306:3306
 
 volumes:
-  dotnet-tools:
+  dotnet_tools:
   mysql:
