fix: GRPC game ip

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ GAME_DB_NAME=game-server
 GAME_IP=localhost
 LOGIN_IP=localhost
 
+GRPC_GAME_IP=localhost
 GRPC_WORLD_IP=localhost
 GRPC_WORLD_PORT=21001
 
