Use loopback instead of localhost
If your login was slow, make sure to update the .env file :)

--- a/.env.example
+++ b/.env.example
@@ -15,12 +15,12 @@ GAME_DB_NAME=game-server
 
 # Maple2.Server - Only needed if hosting for external access
 
-GAME_IP=localhost
-LOGIN_IP=localhost
+GAME_IP=127.0.0.1
+LOGIN_IP=127.0.0.1
 
-GRPC_GAME_IP=localhost
-GRPC_WORLD_IP=localhost
+GRPC_GAME_IP=127.0.0.1
+GRPC_WORLD_IP=127.0.0.1
 GRPC_WORLD_PORT=21001
 
-WEB_IP=localhost
+WEB_IP=127.0.0.1
 WEB_PORT=4000
