--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,5 @@ FodyWeavers.xsd
 /PacketStructures
 /Maple2.File.Ingest/Resources
 /Maple2.File.Ingest/Navmeshes/*.navmesh
+.idea/.idea.Maple2/.idea/sqldialects.xml
+.idea/.idea.Maple2/.idea/dataSources.xml
