--- a/.editorconfig
+++ b/.editorconfig
@@ -65,7 +65,7 @@ dotnet_naming_symbols.private_static_readonly_symbols.applicable_accessibilities
 dotnet_naming_symbols.private_static_readonly_symbols.applicable_kinds = field
 dotnet_naming_symbols.private_static_readonly_symbols.required_modifiers = static,readonly
 dotnet_naming_symbols.unity_serialized_field_symbols.applicable_accessibilities = *
-dotnet_naming_symbols.unity_serialized_field_symbols.applicable_kinds =
+dotnet_naming_symbols.unity_serialized_field_symbols.applicable_kinds = 
 dotnet_naming_symbols.unity_serialized_field_symbols.resharper_applicable_kinds = unity_serialised_field
 dotnet_naming_symbols.unity_serialized_field_symbols.resharper_required_modifiers = instance
 dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:none
@@ -107,7 +107,7 @@ resharper_csharp_wrap_ternary_expr_style = wrap_if_long
 resharper_formatter_off_tag = @formatter:off
 resharper_formatter_on_tag = @formatter:on
 resharper_formatter_tags_enabled = true
-resharper_instance_members_qualify_declared_in =
+resharper_instance_members_qualify_declared_in = 
 resharper_keep_existing_attribute_arrangement = true
 resharper_keep_existing_declaration_block_arrangement = true
 resharper_keep_existing_embedded_block_arrangement = true
@@ -115,7 +115,7 @@ resharper_keep_existing_enum_arrangement = true
 resharper_keep_existing_initializer_arrangement = false
 resharper_modifiers_order = protected public override private new internal static async virtual sealed abstract extern unsafe volatile readonly required
 resharper_outdent_statement_labels = true
-resharper_parentheses_non_obvious_operations = none, bitwise_and, bitwise_exclusive_or, bitwise_inclusive_or, bitwise, conditional_and
+resharper_parentheses_non_obvious_operations = none, bitwise_and, bitwise_exclusive_or, bitwise_inclusive_or, bitwise
 resharper_parentheses_redundancy_style = remove
 resharper_place_expr_accessor_on_single_line = true
 resharper_place_expr_method_on_single_line = true
@@ -124,8 +124,8 @@ resharper_place_field_attribute_on_same_line = if_owner_is_single_line
 resharper_place_record_field_attribute_on_same_line = true
 resharper_place_simple_anonymousmethod_on_single_line = false
 resharper_place_simple_embedded_statement_on_same_line = true
-resharper_place_simple_initializer_on_single_line = false
-resharper_space_within_single_line_array_initializer_braces = false
+resharper_place_simple_initializer_on_single_line = true
+resharper_space_within_single_line_array_initializer_braces = true
 resharper_trailing_comma_in_multiline_lists = true
 resharper_use_indent_from_vs = false
 resharper_wrap_array_initializer_style = chop_always
