--- a/Maple2.Server.Core/Maple2.Server.Core.csproj
+++ b/Maple2.Server.Core/Maple2.Server.Core.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="Google.Protobuf" Version="3.22.0" />
         <PackageReference Include="Grpc.AspNetCore.HealthChecks" Version="2.51.0" />
         <PackageReference Include="Grpc.AspNetCore.Server" Version="2.51.0" />
