--- a/Maple2.Database/Maple2.Database.csproj
+++ b/Maple2.Database/Maple2.Database.csproj
@@ -12,6 +12,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="Caching.dll" Version="2.0.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.3" />
