--- a/Maple2.Server.Game/Dockerfile
+++ b/Maple2.Server.Game/Dockerfile
@@ -12,16 +12,17 @@ COPY ["Maple2.Tools/Maple2.Tools.csproj", "Maple2.Tools/"]
 COPY ["Maple2.Model/Maple2.Model.csproj", "Maple2.Model/"]
 COPY ["Maple2.Database/Maple2.Database.csproj", "Maple2.Database/"]
 COPY ["Maple2.Server.Core/Maple2.Server.Core.csproj", "Maple2.Server.Core/"]
-RUN dotnet restore -r win-x64 "Maple2.Server.Game/Maple2.Server.Game.csproj"
+RUN dotnet restore "Maple2.Server.Game/Maple2.Server.Game.csproj"
 COPY . .
 WORKDIR "/src/Maple2.Server.Game"
 
 FROM build AS publish
-RUN dotnet publish -r win-x64 "Maple2.Server.Game.csproj" -c Debug
+RUN dotnet publish "Maple2.Server.Game.csproj" -c Debug /p:IsDockerBuild=true
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /src/Maple2.Server.Game/bin/Debug/net8.0/win-x64/publish .
-COPY --from=build /src/Maple2.File.Ingest/Navmeshes /Maple2.File.Ingest/Navmeshes
+COPY --from=publish /src/Maple2.Server.Game/bin/Debug/net8.0/publish .
+COPY --from=build /src/Maple2.Server.Game/Scripting/Scripts /app/Scripts
+COPY --from=build /src/Maple2.Server.Game/Navmeshes /app/Navmeshes
 
 ENTRYPOINT ["dotnet", "Maple2.Server.Game.dll"]
