--- a/Maple2.Server.Game/Maple2.Server.Game.csproj
+++ b/Maple2.Server.Game/Maple2.Server.Game.csproj
@@ -7,53 +7,61 @@
         <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
         <LangVersion>12</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
+        <IsDockerBuild Condition="'$(IsDockerBuild)' == ''">false</IsDockerBuild>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <DefineConstants>TRACE;TRIGGER_DEBUG</DefineConstants>
+        <DefineConstants>TRACE;TRIGGER_DEBUG</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Maple2.Database\Maple2.Database.csproj" />
-        <ProjectReference Include="..\Maple2.Server.Core\Maple2.Server.Core.csproj" />
+        <ProjectReference Include="..\Maple2.Database\Maple2.Database.csproj"/>
+        <ProjectReference Include="..\Maple2.Server.Core\Maple2.Server.Core.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
-        <PackageReference Include="Grpc.AspNetCore.Server" Version="2.67.0" />
-        <PackageReference Include="Grpc.Net.Client" Version="2.67.0" />
-        <PackageReference Include="IronPython" Version="3.4.1" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0"/>
+        <PackageReference Include="Grpc.AspNetCore.Server" Version="2.67.0"/>
+        <PackageReference Include="Grpc.Net.Client" Version="2.67.0"/>
+        <PackageReference Include="IronPython" Version="3.4.1"/>
         <PackageReference Include="IronPython.StdLib" Version="3.4.1">
-<!--            <ExcludeAssets>contentFiles</ExcludeAssets>-->
+            <!--            <ExcludeAssets>contentFiles</ExcludeAssets>-->
         </PackageReference>
-        <PackageReference Include="Maple2.Lua" Version="2.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
-        <PackageReference Include="Serilog.Expressions" Version="3.4.1" />
-        <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
-        <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.1" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-        <PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1" />
-        <PackageReference Include="DijkstraAlgorithm" Version="1.1.0" />
-        <PackageReference Include="DotRecast.Core" Version="2024.2.3" />
-        <PackageReference Include="DotRecast.Detour" Version="2024.2.3" />
-        <PackageReference Include="DotRecast.Recast" Version="2024.2.3" />
-        <PackageReference Include="DotRecast.Recast.Toolset" Version="2024.2.3" />
+        <PackageReference Include="Maple2.Lua" Version="2.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0"/>
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0"/>
+        <PackageReference Include="Serilog.Expressions" Version="3.4.1"/>
+        <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0"/>
+        <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.1"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
+        <PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1"/>
+        <PackageReference Include="DijkstraAlgorithm" Version="1.1.0"/>
+        <PackageReference Include="DotRecast.Core" Version="2024.2.3"/>
+        <PackageReference Include="DotRecast.Detour" Version="2024.2.3"/>
+        <PackageReference Include="DotRecast.Recast" Version="2024.2.3"/>
+        <PackageReference Include="DotRecast.Recast.Toolset" Version="2024.2.3"/>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(IsDockerBuild)' == 'true'">
+        <None Remove="Scripting\Scripts\Trigger\**\*.py"/>
+        <None Remove="Navmeshes\**\*.navmesh"/>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(IsDockerBuild)' != 'true'">
+        <None Update="Scripting\Scripts\Trigger\**\*.py">
+            <ParentDir>$([System.IO.Path]::GetFileName($([System.String]::Copy('%(RecursiveDir)').TrimEnd('\'))))\</ParentDir>
+            <TargetPath>Scripts\Trigger\%(ParentDir)\%(Filename)%(Extension)</TargetPath>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Navmeshes\**\*.navmesh">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="appsettings.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-      <None Update="Scripting\Scripts\Trigger\**\*.py">
-        <ParentDir>$([System.IO.Path]::GetFileName($([System.String]::Copy('%(RecursiveDir)').TrimEnd('\'))))\</ParentDir>
-        <TargetPath>Scripts\Trigger\%(ParentDir)\%(Filename)%(Extension)</TargetPath>
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-      <None Update="Scripting\Scripts\Trigger\trigger_api.py">
-        <TargetPath>Scripts\Trigger\trigger_api.py</TargetPath>
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
