Fix: trigger_api copying

--- a/Maple2.Server.Game/Maple2.Server.Game.csproj
+++ b/Maple2.Server.Game/Maple2.Server.Game.csproj
@@ -63,5 +63,9 @@
         <None Update="appsettings.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Scripting\Scripts\Trigger\trigger_api.py">
+            <TargetPath>Scripts\Trigger\trigger_api.py</TargetPath>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
