--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           dotnet-version: 9
       - name: Build
-        run: dotnet build -c Release --parallel
+        run: dotnet build -c Release
