--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Format
+name: Build Maple2
 
 on:
   push:
@@ -7,15 +7,14 @@ on:
     branches: ["master"]
 
 jobs:
-  format:
+  build:
     runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9
-      - name: Run dotnet format
-        run: dotnet format whitespace --verify-no-changes --exclude 'Maple2.Server.World/Migrations/*.cs'
+      - name: Build
+        run: dotnet build -c Release
