--- a/Maple2.Server.Login/appsettings.json
+++ b/Maple2.Server.Login/appsettings.json
@@ -19,7 +19,7 @@
             "template": "{@t:HH:mm:ss.fff} {Substring(SourceContext, LastIndexOf(SourceContext, '.') + 1),12} [{@l:u3}] <{ThreadId}> {@m}\n{@x}",
             "theme": "Serilog.Templates.Themes.TemplateTheme::Literate, Serilog.Expressions"
           },
-          "restrictedToMinimumLevel": "Debug"
+          "restrictedToMinimumLevel": "Verbose"
         }
       },
       {
