--- a/Maple2.Server.Web/Maple2.Server.Web.csproj
+++ b/Maple2.Server.Web/Maple2.Server.Web.csproj
@@ -31,4 +31,8 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Model\" />
+    </ItemGroup>
 </Project>
