--- a/Maple2.Server.Tests/Maple2.Server.Tests.csproj
+++ b/Maple2.Server.Tests/Maple2.Server.Tests.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Maple2.Lua" Version="2.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="NUnit" Version="3.14.0" />
