chore(logging): reduce log verbosity and update log levels

--- a/Maple2.Server.Game/appsettings.json
+++ b/Maple2.Server.Game/appsettings.json
@@ -13,7 +13,8 @@
         "Microsoft.Hosting": "Information",
         "Microsoft.AspNetCore.Routing": "Warning",
         "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning",
-        "Grpc": "Information"
+        "System.Net.Http.HttpClient": "Warning",
+        "Grpc": "Warning"
       }
     },
     "WriteTo": [
