--- a/Maple2.Server.Login/appsettings.json
+++ b/Maple2.Server.Login/appsettings.json
@@ -7,7 +7,9 @@
       "Override": {
         "Microsoft": "Information",
         "Microsoft.Hosting": "Information",
-        "Grpc": "Information"
+        "Microsoft.AspNetCore.Routing": "Warning",
+        "System.Net.Http.HttpClient": "Warning",
+        "Grpc": "Warning"
       }
     },
     "WriteTo": [
