--- a/Maple2.Server.World/appsettings.json
+++ b/Maple2.Server.World/appsettings.json
@@ -8,7 +8,8 @@
         "Microsoft": "Information",
         "Microsoft.AspNetCore": "Warning",
         "Microsoft.Hosting": "Information",
-        "Grpc": "Information"
+        "System.Net.Http.HttpClient": "Warning",
+        "Grpc": "Warning"
       }
     },
     "WriteTo": [
