--- a/Maple2.Server.Game/Maple2.Server.Game.csproj
+++ b/Maple2.Server.Game/Maple2.Server.Game.csproj
@@ -25,8 +25,7 @@
         <PackageReference Include="Grpc.Net.Client" Version="2.67.0"/>
         <PackageReference Include="IronPython" Version="3.4.1"/>
         <PackageReference Include="IronPython.StdLib" Version="3.4.1">
-            <ExcludeAssets>contentFiles</ExcludeAssets>
-            <PrivateAssets>all</PrivateAssets>
+            <!--            <ExcludeAssets>contentFiles</ExcludeAssets>-->
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0"/>
         <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0"/>
