--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,4 @@ FodyWeavers.xsd
 /Maple2.File.Ingest/Navmeshes/*.navmesh
 .idea/.idea.Maple2/.idea/sqldialects.xml
 .idea/.idea.Maple2/.idea/dataSources.xml
+/Maple2.Server.Game/DebugTriggers
