--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 # To use with docker, rename MS2_DATA_FOLDER to MS2_DOCKER_DATA_FOLDER
 MS2_DATA_FOLDER=C:/Nexon/Library/maplestory2/Data/
 
+# Primary language. Mainly used for searching on black market, commands, etc.
+# EN, KR, CN, JP, DE, PR
+LANGUAGE=EN
+
 # Database connection
 
 DB_IP=localhost
