--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@ FodyWeavers.xsd
 .idea/.idea.Maple2/.idea/sqldialects.xml
 .idea/.idea.Maple2/.idea/dataSources.xml
 /Maple2.Server.Game/DebugTriggers
+.idea/.idea.Maple2/.idea/AugmentWebviewStateStore.xml
